# analysisfile

Bookly-master/: README.md  background.js  config.js  index.html  manifest.json  script.js
ChromeExtensions-master/: README.md  VLCExtensions.crx  VLCExtensions.pem  background.html  content.js  failsafe.crx  manifest.json  ml_not_check.crx  ml_not_check.pem
Douban-Radio-master/: manifest.json  option.html  popup.html
HistoryCards-master/: Gruntfile.js  README.md  bower.json  package.json
IMDBWatchlistChecker-master/: README.md  build.cmd  index.html
JS-Bin-Plus-master/: README.md  background.js  helpers.js  injectedCode.js  jsbinContent.js  manifest.json
MNSE-master/: README.md
MyExtension-master/: Workspace.xml
RTL-Support-for-BaseCamp-master/: manifest.json
TwittHelp-master/: background.js  contentscript.js  jquery.simulate.js  manifest.json  popup.css  popup.html  popup.js
TypeScript-Console-master/: .gitignore  README.md  typescript-console.crx
ancho-master/: .gitignore  .gitmodules  LICENSE
ancho-master/code/IE/: CMakeLists.txt
ancho-master/code/IE/AnchoBgSrv/: AnchoAddonService.cpp  AnchoAddonService.h  AnchoBackground.cpp  AnchoBackground.h  AnchoBackgroundAPI.cpp  AnchoBackgroundAPI.h  AnchoBgSrv.cpp  AnchoBgSrv.idl  AnchoBgSrv.rc  AnchoBgSrv.rgs  AnchoBgSrvModule.h  BackgroundWindow.cpp  BackgroundWindow.h  CMakeLists.txt  IECookie.cpp  IECookieManager.cpp  PopupWindow.cpp  PopupWindow.h  StorageDatabase.cpp  stdafx.h
ancho-master/code/IE/AnchoBgSrv/AnchoBackgroundServer/: JSConstructorManager.hpp  PageActionProxy.hpp  PeriodicTimer.hpp  TabManager.hpp  UpdateChecking.hpp  WindowManager.hpp
ancho-master/code/IE/AnchoBgSrv/res/js/: api.js  browserAction.js  cookies.js  extension.js  i18n.js  pageAction.js  runtime.js  tabs.js  webRequest.js  windows.js
ancho-master/code/IE/AnchoBgSrv/res/js/specifications/: pageAction_spec.js  webRequest_spec.js
ancho-master/code/IE/AnchoBgSrv/res/js/utils/: typeChecking.js  utils.js
ancho-master/code/IE/AnchoBgSrv/res/toolbars/: browserActionToolbar.html
ancho-master/code/IE/AnchoBgSrv/src/: PageActionProxy.cpp  TabManager.cpp  UpdateChecking.cpp  WindowManager.cpp
ancho-master/code/IE/AnchoShared/AnchoShared/: XmlHttpRequest.h
ancho-master/code/IE/ancho/: AnchoAddon.cpp  AnchoAddon.h  AnchoPassthruAPP.cpp  AnchoPassthruAPP.h  AnchoRuntime.cpp  AnchoRuntime.h  AnchoRuntime.rgs  CMakeLists.txt  CookieManager.cpp  CookieManager.h  HtmlToolbarWindow.cpp  HtmlToolbarWindow.h  WindowDocumentMap.h  ancho.idl  ancho.rc  ancho.rgs  dllmain.h  stdafx.h
ancho-master/code/IE/anchoPageActions/: CMakeLists.txt  PageActionIEWindow.cpp  PageActionIEWindow.hpp  PageActionModule.cpp  PageActionModule.hpp  PageActionToolbar.cpp  PageActionToolbar.hpp  dllmain.cpp  dllmain.h  stdafx.cpp  stdafx.h
ancho-master/code/IE/anchoPageActionsBroker/: CMakeLists.txt  broker.cpp  stdafx.cpp  stdafx.h
ancho-master/code/IE/anchocommons/: CMakeLists.txt  Exceptions.h  PageActionBase.cpp  PageActionBase.hpp  SimpleWrappers.h  anchocommons.h  strings.cpp
ancho-master/code/IE/anchocommons/AnchoCommons/: AsynchronousTaskManager.hpp  COMConversions.hpp  JSValueWrapper.hpp  JavaScriptCallback.hpp
ancho-master/code/IE/anchocommons/AnchoCommons/detail/: JSValueIterators.hpp
ancho-master/code/IE/anchocommons/src/: AsynchronousTaskManager.cpp
ancho-master/code/IE/crxProcessing/: CMakeLists.txt
ancho-master/code/IE/crxProcessing/crxProcessing/: extract.hpp
ancho-master/code/IE/crxProcessing/src/: extract.cpp
bookmarking-chrome-ext-master/: manifest.json
browser-plugins-master/: README.md
cheaper-plz-master/: .gitignore  .npmignore  LICENSE  README.md
chrext-master/: README.md
chrome-aol-filter-master/: README.md  background.js  manifest.json  normalizer.js  popup.html  popup.js  script.js
chrome-keyvalue-master/: Readme.md  component.json  index.js
chromechat_extension-master/: .rvmrc  .vimrc  Gemfile  Gruntfile.js  README.md  bower.json  config.rb  karma-e2e.conf.js  karma-midway.conf.js  karma-shared.conf.js  karma.conf.js  package.json
clock/: alarm.js  clock.js  main.js  script.js  stopwatch.js  timer.js
cpord-status-master/: Gruntfile.js  README.md  bower.json  package.json
crusade_chrome_extension-master/: .gitignore  Gruntfile.js  bower.json  package.json  test_payload.json
dev-flow-master/: README.md
downloadExtension-master/: README.md
dphuodong-master/: README.md  api.txt  b.js  background.html  background.js  btn.html  controller.js  crawler.js  datepicker.css  gettoken.js  manifest.json  options.html  options.js  popup.html  services.js  settings.js
esse3-auto-login-chrome-master/: .gitignore  .jshintrc  .travis.yml  CHANGELOG.md  Gruntfile.js  README.md  bower.json  package.json
extension-master/: .gitignore.swp  README  catblock.crx  catblock.pem
facebook-noise-chrome-extension-master/: background.js  contentscript.js  manifest.json  popup.html  popup.js
funicode_crx-master/: background.html  manifest.json  popup.html  popup_style.css  selective_php.js  transmogrify.js  transmogrify_page.js
get-creative-master/: .gitignore  README.md
github-chrome-master/: README.md  popup.html  test
github-feed-chrome-extension-master/: Gruntfile.js  LICENSE  README.md  bower.json  package.json
github-tools-chrome-extension-master/: .dev-server-hooks.js  README.md
google_plus_photos-master/: README.md  RELEASE_INFO.TXT  background.js  hosts.js  jspb_parser.html  jspb_parser.js  manifest.json  platform_not_supported.html  platform_not_supported.js  platform_not_supported_ltr.css  platform_not_supported_rtl.css  popup.html  popup.js  pre_base.js  pulsar_ui.html  pulsar_ui_ltr.css  pulsar_ui_ltr.js  pulsar_ui_rtl.css  pulsar_ui_rtl.js  resizer.nmf
in-app-payments/: background.js  main.js
keepass-dropbox-chrome-extension-master/: credentials_check.js  dropbox_keepass_background.js  dropbox_keepass_options.html  dropbox_keepass_options.js  manifest.json
leagueNews-master/: .gitignore  .jshintrc  .ruby-gemset  Gruntfile.js  README.md  bower.json  package.json
text-editor/: editor.js  (+4 more)
(+1877 files in other folders)
